# duckdb-usd

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COOKBOOK.md  EXAMPLES.md  LICENSE  Makefile  README.md  STATUS.md  USER_GUIDE.md  benchmark_large_file.sh  description.yml  extension_config.cmake  test_extension.py  test_extension.sh  test_with_homebrew.sh  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  test.yml
scripts/: create_test_usd.py
src/: usd_extension.cpp  usd_helpers.cpp  usd_prims.cpp  usd_properties.cpp  usd_relationships.cpp  usd_xforms.cpp
src/include/: usd_extension.hpp  usd_helpers.hpp  usd_prims.hpp  usd_properties.hpp  usd_relationships.hpp  usd_xforms.hpp
test/data/: empty_scene.usda  minimal_scene.usda  not_a_usd_file.txt  relationships_scene.usda  simple_scene.usda  transforms_scene.usda
test/sql/: usd_edge_cases.test  usd_error_handling.test  usd_prims.test  usd_properties.test  usd_relationships.test  usd_test.test  usd_xforms.test
